--- a/ragnarok.conf
+++ b/ragnarok.conf
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 6.1.99 Kernel Configuration
+# Linux/x86 6.1.106 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="Debian clang version 17.0.6 (++20231208085813+6009708b4367-1~exp1~20231208085906.81)"
 CONFIG_GCC_VERSION=0
@@ -1080,6 +1080,7 @@ CONFIG_DEVICE_MIGRATION=y
 CONFIG_ARCH_ENABLE_HUGEPAGE_MIGRATION=y
 CONFIG_ARCH_ENABLE_THP_MIGRATION=y
 CONFIG_CONTIG_ALLOC=y
+CONFIG_PCP_BATCH_SCALE_MAX=5
 CONFIG_PHYS_ADDR_T_64BIT=y
 CONFIG_MMU_NOTIFIER=y
 CONFIG_KSM=y
