--- a/ragnarok.config
+++ b/ragnarok.config
@@ -1,18 +1,18 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 6.12.31-ragnarok Kernel Configuration
+# Linux/x86 6.12.41-ragnarok Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="clang version 19.1.7"
+CONFIG_CC_VERSION_TEXT="clang version 20.1.8"
 CONFIG_GCC_VERSION=0
 CONFIG_CC_IS_CLANG=y
-CONFIG_CLANG_VERSION=190107
+CONFIG_CLANG_VERSION=200108
 CONFIG_AS_IS_LLVM=y
-CONFIG_AS_VERSION=190107
+CONFIG_AS_VERSION=200108
 CONFIG_LD_VERSION=0
 CONFIG_LD_IS_LLD=y
-CONFIG_LLD_VERSION=190107
-CONFIG_RUSTC_VERSION=108600
-CONFIG_RUSTC_LLVM_VERSION=190107
+CONFIG_LLD_VERSION=200108
+CONFIG_RUSTC_VERSION=108800
+CONFIG_RUSTC_LLVM_VERSION=200105
 CONFIG_CC_CAN_LINK=y
 CONFIG_CC_CAN_LINK_STATIC=y
 CONFIG_CC_HAS_ASM_GOTO_OUTPUT=y
@@ -21,6 +21,7 @@ CONFIG_TOOLS_SUPPORT_RELR=y
 CONFIG_CC_HAS_ASM_INLINE=y
 CONFIG_CC_HAS_NO_PROFILE_FN_ATTR=y
 CONFIG_CC_HAS_COUNTED_BY=y
+CONFIG_RUSTC_HAS_UNNECESSARY_TRANSMUTES=y
 CONFIG_PAHOLE_VERSION=0
 CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_TABLE_SORT=y
@@ -567,6 +568,7 @@ CONFIG_MITIGATION_SPECTRE_V2=y
 CONFIG_MITIGATION_SRBDS=y
 CONFIG_MITIGATION_SSB=y
 CONFIG_MITIGATION_ITS=y
+CONFIG_MITIGATION_TSA=y
 CONFIG_ARCH_HAS_ADD_PAGES=y
 
 #
