--- a/ragnarok.config
+++ b/ragnarok.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 6.12.41-ragnarok Kernel Configuration
+# Linux/x86 6.12.58-ragnarok Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="clang version 20.1.8"
 CONFIG_GCC_VERSION=0
@@ -11,8 +11,8 @@ CONFIG_AS_VERSION=200108
 CONFIG_LD_VERSION=0
 CONFIG_LD_IS_LLD=y
 CONFIG_LLD_VERSION=200108
-CONFIG_RUSTC_VERSION=108800
-CONFIG_RUSTC_LLVM_VERSION=200105
+CONFIG_RUSTC_VERSION=108900
+CONFIG_RUSTC_LLVM_VERSION=200107
 CONFIG_CC_CAN_LINK=y
 CONFIG_CC_CAN_LINK_STATIC=y
 CONFIG_CC_HAS_ASM_GOTO_OUTPUT=y
@@ -569,6 +569,7 @@ CONFIG_MITIGATION_SRBDS=y
 CONFIG_MITIGATION_SSB=y
 CONFIG_MITIGATION_ITS=y
 CONFIG_MITIGATION_TSA=y
+CONFIG_MITIGATION_VMSCAPE=y
 CONFIG_ARCH_HAS_ADD_PAGES=y
 
 #
@@ -8232,7 +8233,6 @@ CONFIG_INFINIBAND_CXGB4=m
 CONFIG_INFINIBAND_HFI1=m
 # CONFIG_HFI1_DEBUG_SDMA_ORDER is not set
 # CONFIG_SDMA_VERBOSITY is not set
-CONFIG_INFINIBAND_IRDMA=m
 # CONFIG_MANA_INFINIBAND is not set
 CONFIG_MLX4_INFINIBAND=m
 CONFIG_MLX5_INFINIBAND=m
@@ -8523,6 +8523,7 @@ CONFIG_VHOST_SCSI=m
 CONFIG_VHOST_VSOCK=m
 CONFIG_VHOST_VDPA=m
 # CONFIG_VHOST_CROSS_ENDIAN_LEGACY is not set
+# CONFIG_VHOST_ENABLE_FORK_OWNER_CONTROL is not set
 
 #
 # Microsoft Hyper-V guest support
